--- a/CuentasApi/appsettings.json
+++ b/CuentasApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CorsSettings": {
+    "AllowedOrigins": [
+      "http://localhost:4200"
+    ]
+  }
 }
